log
Thu Apr 21 15:33:36 UTC 2022: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:14: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘lower_then’; did you mean ‘lower_than’?
     if(tree->lower_then(key,aux->pair->key)==1){
              ^~~~~~~~~~
              lower_than
treemap.c:81:16: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘lower_then’; did you mean ‘lower_than’?
       if(tree->lower_then(aux->pair->key,key)==1){
                ^~~~~~~~~~
                lower_than
Compilation failed
e63433c
Thu Apr 21 15:34:12 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d174542
Thu Apr 21 15:35:20 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
f253337
Thu Apr 21 15:43:36 UTC 2022: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:12: error: ‘return’ with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:46:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c:55:13: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   TreeNode *nuevoNodo=createTreeNode(key,value);
             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9269959
Thu Apr 21 15:43:57 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:13: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   TreeNode *nuevoNodo=createTreeNode(key,value);
             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
be31ef0
Thu Apr 21 15:45:50 UTC 2022: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:15: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
     TreeNode *nuevoNodo=createTreeNode(key,value);
               ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0d13f24
Mon Apr 25 01:53:03 UTC 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:15: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
     TreeNode *nuevoNodo=createTreeNode(key,value);
               ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aa6fdff
Mon Apr 25 01:53:20 UTC 2022: 
 treemap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
ed2998a
Mon Apr 25 01:57:47 UTC 2022: 
 treemap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:30: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
     if(is_equal(tree, current->key, key) == 1){
                              ^~
treemap.c:61:38: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
       if(tree->lower_than(key,current->key) == 1){
                                      ^~
treemap.c:66:36: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
         if(tree->lower_than(current->key,key) == 1){
                                    ^~
treemap.c:73:37: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
     if(tree->lower_than(key, current->key) == 1){
                                     ^~
treemap.c:78:34: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
       if(tree->lower_than(current->key, key) == 1){
                                  ^~
Compilation failed
19b2673
